fix: include company

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		<section>
 			<header class="major">
 				<h2>
-					Hi, welcome to <b>Appkit</b>.
+					Hi, welcome to the <b>Appkit</b> Company.
 				</h2>
 			</header>
 		</section>
